# stm32f4_rs

./: .gitignore  Cargo.toml  build.rs  flash.sh
.cargo/: config
src/: button.rs  gpio.rs  hal_time.rs  led.rs  main.rs  nucleo_f411re.rs  uart.rs
src/stm32f4_hal/: .cproject  .mxproject  .project  CMakeLists.txt  flash.sh  stm32f4_hal.ioc
src/stm32f4_hal/Src/: main.c
