[package]
name = "poyo"
version = "0.1.0"
authors = ["Ryunosuke <rew.7cc.12.1f@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#links = "hal"
#build = "build.rs"
#
#[dependencies]
#libc = "0.2.0"
#
#[build-dependencies]
#cc = "*"